--- a/Widgets/Widgets/Flows/WidgetDashboard/WidgetCollectionViewCell/WidgetCollectionViewCell.xib
+++ b/Widgets/Widgets/Flows/WidgetDashboard/WidgetCollectionViewCell/WidgetCollectionViewCell.xib
@@ -2,6 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="22505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22504"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="collection view cell content view" minToolsVersion="11.0"/>
@@ -10,37 +11,42 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="8sg-Lk-rfD">
-            <rect key="frame" x="0.0" y="0.0" width="266" height="272"/>
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="8sg-Lk-rfD" customClass="WidgetCollectionViewCell" customModule="Widgets" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="267" height="272"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="xya-59-1II">
-                <rect key="frame" x="0.0" y="0.0" width="266" height="272"/>
+                <rect key="frame" x="0.0" y="0.0" width="267" height="272"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="SJK-tf-yGY">
-                        <rect key="frame" x="7" y="7" width="252" height="258"/>
+                        <rect key="frame" x="0.0" y="0.0" width="267" height="272"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="291-7c-Bka">
-                                <rect key="frame" x="0.0" y="0.0" width="252" height="233"/>
+                                <rect key="frame" x="0.0" y="0.0" width="267" height="247"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="25D-f1-Bx2">
-                                        <rect key="frame" x="0.0" y="0.0" width="252" height="233"/>
+                                        <rect key="frame" x="0.66666666666665719" y="0.0" width="266" height="247"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="266" id="vX0-7k-HYL"/>
+                                        </constraints>
                                     </imageView>
                                 </subviews>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <constraints>
                                     <constraint firstItem="25D-f1-Bx2" firstAttribute="top" secondItem="291-7c-Bka" secondAttribute="top" id="5e7-Gh-7Nc"/>
                                     <constraint firstAttribute="bottom" secondItem="25D-f1-Bx2" secondAttribute="bottom" id="c0K-eI-sgM"/>
-                                    <constraint firstItem="25D-f1-Bx2" firstAttribute="leading" secondItem="291-7c-Bka" secondAttribute="leading" id="efe-hG-ieW"/>
-                                    <constraint firstAttribute="trailing" secondItem="25D-f1-Bx2" secondAttribute="trailing" id="eyV-8N-9bL"/>
+                                    <constraint firstItem="25D-f1-Bx2" firstAttribute="centerY" secondItem="291-7c-Bka" secondAttribute="centerY" id="db5-fI-sy9"/>
+                                    <constraint firstItem="25D-f1-Bx2" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="291-7c-Bka" secondAttribute="leading" id="efe-hG-ieW"/>
+                                    <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="25D-f1-Bx2" secondAttribute="trailing" id="eyV-8N-9bL"/>
+                                    <constraint firstItem="25D-f1-Bx2" firstAttribute="centerX" secondItem="291-7c-Bka" secondAttribute="centerX" id="iVA-ef-U0U"/>
                                 </constraints>
                             </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SwS-Ja-mHi">
-                                <rect key="frame" x="0.0" y="237" width="252" height="21"/>
+                                <rect key="frame" x="0.0" y="251" width="267" height="21"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="21" id="UrD-Hl-aRP"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
@@ -48,14 +54,20 @@
                     </stackView>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="bottom" secondItem="SJK-tf-yGY" secondAttribute="bottom" constant="7" id="HFn-sI-tCO"/>
-                    <constraint firstAttribute="trailing" secondItem="SJK-tf-yGY" secondAttribute="trailing" constant="7" id="dzl-uf-dEq"/>
-                    <constraint firstItem="SJK-tf-yGY" firstAttribute="top" secondItem="xya-59-1II" secondAttribute="top" constant="7" id="slS-di-3JW"/>
-                    <constraint firstItem="SJK-tf-yGY" firstAttribute="leading" secondItem="xya-59-1II" secondAttribute="leading" constant="7" id="u2M-cz-33x"/>
+                    <constraint firstAttribute="bottom" secondItem="SJK-tf-yGY" secondAttribute="bottom" id="HFn-sI-tCO"/>
+                    <constraint firstAttribute="trailing" secondItem="SJK-tf-yGY" secondAttribute="trailing" id="dzl-uf-dEq"/>
+                    <constraint firstItem="SJK-tf-yGY" firstAttribute="top" secondItem="xya-59-1II" secondAttribute="top" id="slS-di-3JW"/>
+                    <constraint firstItem="SJK-tf-yGY" firstAttribute="leading" secondItem="xya-59-1II" secondAttribute="leading" id="u2M-cz-33x"/>
                 </constraints>
             </collectionViewCellContentView>
-            <size key="customSize" width="266" height="272"/>
-            <point key="canvasLocation" x="68.702290076335871" y="69.718309859154928"/>
+            <size key="customSize" width="267" height="272"/>
+            <connections>
+                <outlet property="contentContainerView" destination="291-7c-Bka" id="gsN-vM-ZLd"/>
+                <outlet property="contentImageView" destination="25D-f1-Bx2" id="2F4-3G-WTw"/>
+                <outlet property="contentImageViewWidthConstraint" destination="vX0-7k-HYL" id="M7E-pn-6qg"/>
+                <outlet property="contentLabel" destination="SwS-Ja-mHi" id="bTI-Sd-rZS"/>
+            </connections>
+            <point key="canvasLocation" x="280.15267175572518" y="69.718309859154928"/>
         </collectionViewCell>
     </objects>
     <resources>
